--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,11 @@ import PrimaryButton from '../components/ui/buttons/PrimaryButton.astro';
 import GhostButton from '../components/ui/buttons/GhostButton.astro';
 import NeomorphicButton from '../components/ui/buttons/NeomorphicButton.astro';
 import LoadingButton from '../components/ui/buttons/LoadingButton.astro';
+import GradientButton from '../components/ui/buttons/GradientButton.astro';
+import IconButton from '../components/ui/buttons/IconButton.astro';
+import ToggleButton from '../components/ui/buttons/ToggleButton.astro';
+import FloatingButton from '../components/ui/buttons/FloatingButton.astro';
+import ProgressButton from '../components/ui/buttons/ProgressButton.astro';
 
 // Importar componentes de tarjetas
 import BasicCard from '../components/ui/cards/BasicCard.astro';
@@ -61,6 +66,11 @@ import ThemeDemo from '../components/ui/demo/ThemeDemo.astro';
 				<GhostButton />
 				<NeomorphicButton />
 				<LoadingButton />
+				<GradientButton />
+				<IconButton />
+				<ToggleButton />
+				<FloatingButton />
+				<ProgressButton />
 			</div>
 		</section>
 
