--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,6 +16,12 @@ import ProgressButton from '../components/ui/buttons/ProgressButton.astro';
 import BasicCard from '../components/ui/cards/BasicCard.astro';
 import ImageCard from '../components/ui/cards/ImageCard.astro';
 import ProfileCard from '../components/ui/cards/ProfileCard.astro';
+import StatsCard from '../components/ui/cards/StatsCard.astro';
+import PricingCard from '../components/ui/cards/PricingCard.astro';
+import TestimonialCard from '../components/ui/cards/TestimonialCard.astro';
+import NotificationCard from '../components/ui/cards/NotificationCard.astro';
+import ProductCard from '../components/ui/cards/ProductCard.astro';
+import DashboardCard from '../components/ui/cards/DashboardCard.astro';
 
 // Importar componentes de formulario
 import FloatingInput from '../components/ui/forms/FloatingInput.astro';
@@ -80,6 +86,12 @@ import ThemeDemo from '../components/ui/demo/ThemeDemo.astro';
 				<BasicCard />
 				<ImageCard />
 				<ProfileCard />
+				<StatsCard />
+				<PricingCard />
+				<TestimonialCard />
+				<NotificationCard />
+				<ProductCard />
+				<DashboardCard />
 			</div>
 		</section>
 
